src/css/proj/brutus.css
@keyframes expand {
  0% {
    width: 250px;
    height: 250px;
  }
  20% {
    width: 250px;
    height: 250px;
  }
  100% {
    width: calc(100% - 34px);
    height: calc(100% - 104px);
  }
}

@keyframes retract {
  0% {
    width: calc(100% - 34px);
    height: calc(100% - 104px);
  }
  50% {
    width: 250px;
    height: 250px;
  }
  100% {
    width: 250px;
    height: 250px;
  }
}

@keyframes ghShow {
  0% {
    top: 0px;
  }
  15% {
    top: 0px;
  }
  100% {
    top: 260px;
  }
}

@keyframes ghHide {
  0% {
    top: 260px;
  }
  15% {
    top: 260px;
  }
  100% {
    top: 0px;
  }
}

@keyframes pShow {
  0% {
    transform: translateX(-250px);
  }
  15% {
    transform: translateX(-250px);
  }
  100% {
    transform: translateX(0px);
  }
}

@keyframes pHide {
  0% {
    transform: translateX(0px);
  }
  15% {
    transform: translateX(0px);
  }
  100% {
    transform: translateX(-250px);
  }
}

.ProjectInfo {
  background-color: #a3a3a3ac;
  position: fixed;
  margin-top: 100px;
  margin-left: 30px;
  top: 0;
  left: 0;
  width: calc(100% - 34px);
  height: calc(100% - 104px);
  animation: expand 1s ease;
  border: 2px solid #330b5f;
  border-top-left-radius: 5px;
}

.GitHub{
    position: absolute;
    top: 260px;
    animation: ghShow 1s ease;
    display: flex;
    align-items: center;
    width: auto;
}


.GitHub img{
    width: 80px;
    margin-right: 10px;
}

.GitHub h1{
    font-size: 1em;
    margin: 0;
    color: #333;
}

.GitHub a{
    text-decoration: none;
    display: flex;
    align-items: center;
}

.Program {
  position: fixed;
  display: grid;
  align-items: center;
  top: 100px;
  left: 300px;
  animation: pShow 1s ease;
}

.Program h2 {
  background-color: #330b5f;
  border: 2px solid #252425;
  border-radius: 5px;
  padding: 10px;
  margin: 0px;
  color: #e6e6e6;
  text-align: center;
}

.Program input {
  text-align: center;
  background-color: #330b5f;
  color: #fff;
  border: 1px solid #330b5f;
  border-radius: 10px;
  padding: 5px;
  margin: 1px;
  caret-color: #fff;
  outline: 1px solid #000;
}

.Program button {
  text-align: center;
  background-color: #330b5f;
  color: #fff;
  border: 1px solid #330b5f;
  border-radius: 10px;
  padding: 5px;
  margin: 1px;
  cursor: pointer;
}

.Program button:hover {
  background-color: #5c268b;
}

.Program p1 {
  font-size: 1em;
  text-align: center;
  color: #fff;
}

.Program button:active {
  background-color: #330b5f;
}

.Output {
  position: relative;
  width: 200px;
  height: 106px;
  top: 2px;
  padding-top: 0px;
  background-color: #fff;
  border: 2px solid #330b5f;
  border-radius: 5px;
}

.Output a {
  color: #000;
  padding: 5px;
  white-space: normal;
  word-wrap: break-word;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  line-clamp: 3;
  -webkit-box-orient: vertical;
}

.Project {
  position: absolute;
  top: 100px;
  left: 30px;
  background-color: #330b5f;
  width: 250px;
  height: 250px;
  margin: 1px;
  border-radius: 5px;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border: 2px solid #330b5f;
  border-right: 1px solid #330b5f;
  border-bottom: 1px solid #330b5f;
  box-shadow: 0px 0px 10px #000000;
  perspective: 1000px;
}

.Project:hover {
  transition: background-color 0.5s ease;
  background-color: #fff;
}

.Card {
  display: grid;
  text-decoration: none;
}

.Project img {
  grid-column: 1;
  grid-row: 1;
  width: 200px;
  margin-left: 20px;
  align-items: center;
  transition: transform 1s ease, opacity 0.25s ease-in-out 0.25s;
}

.Project h2 {
  color: #fff;
  grid-column: 1;
  grid-row: 1;
  padding-top: 200px;
  margin: 0px;
  text-align: center;
  transition: transform 1s ease, opacity 0.25s ease-in-out 0.25s;
}

.Project p {
  grid-column: 1;
  grid-row: 1;
  padding-top: 80px;
  font-size: 1.5em;
  text-align: center;
  white-space: normal;
  color: #000;
  transform: rotateY(180deg);
  opacity: 0;
  transition: transform 0.5s ease, opacity 0.25s ease-in-out 0s;
}

.Project:hover img {
  grid-column: 1;
  grid-row: 1;
  transform-style: preserve-3d;
  transition: transform 0.5s ease, opacity 0s ease-in-out 0.15s;
  transform: rotateY(180deg);
  opacity: 0;
}

.Project:hover h2 {
  grid-column: 1;
  grid-row: 1;
  transform-style: preserve-3d;
  transition: transform 0.5s ease, opacity 0s ease-in-out 0.15s;
  transform: rotateY(180deg);
  opacity: 0;
}


.Project:hover p {
  grid-column: 1;
  grid-row: 1;
  padding-top: 80px;
  font-size: 1.5em;
  text-align: center;
  white-space: normal;
  color: #000;
  transform-style: preserve-3d;
  transition: transform 0.5s ease, opacity 0s ease-in-out 0.15s;
  transform: rotateY(0deg);
  opacity: 1;
}

.Project.disable-hover {
  pointer-events: none;
}

.ProjectInfo.on-close {
  animation: retract 1.5s ease;
  transition-delay: 0.75s;
  opacity: 0;
}

.Project.on-close {
  transition: transform 3s ease;
  transition-delay: 0.75s;
  transform: translateX(-1000px);
}

.GitHub.on-close {
  animation: ghHide 1s ease;
  transition-delay: 0.75s;
  opacity: 0;
}

.Program.on-close {
  animation: pHide 1s ease;
  transition-delay: 0.75s;
  opacity: 0;
}

.Menu.on-close a {
  pointer-events: none;
  background-color: #3d0d71;
  color: #fff;
  height: 100%;
}

.Menu.disable-hover {
  pointer-events: none;
}

